# HomeMap

./: .gitignore  ANDROID_READY.md  AUTOUPDATE_COMPLETE.md  CHANGELOG.md  CONFIGURE.md  README.md  README_ANDROID.md  VERSION.md  android log.txt  gauge-widget-1.0.0.hwp  package-lock.json  package.json  tttt
.cargo/: config.toml
.github/: FUNDING.yml  copilot-instructions.md
.github/workflows/: ci.yml  release.yml
docs/: ANDROID_CHECKLIST.md  ANDROID_INSTALL.md  ANDROID_SETUP.md  ANDROID_SIGNING.md  AUTH_PROTECTION.md  CREATE_TABLET_EMULATOR.md  CREATE_WIDGET_PACKAGE.md  CUSTOM_ICONS.md  CUSTOM_ICONS_QUICK.md  DEVELOPMENT.md  DEVICE_PARAMS_IMPL.md  FIND_DEVICE_MANAGER.md  FORUM_POST.html  GITHUB_ACTIONS.md  GITHUB_SECRETS_SETUP.md  IPAD_DEV.md  MULTI_FLOOR_DEVICES.md  MULTI_HC3_SUPPORT.md  PRIVACY.md  RELEASE_READY.md  TUTORIAL.md  WEBSOCKET_IMPLEMENTATION.md  WEBSOCKET_PROTOCOL.md  WIDGET_FORMAT.md  WIDGET_LOADING_FIX.md  WIDGET_PACKAGES.md  deviceautomap.txt
docs/examples/: CUSTOM_ICON_EXAMPLE.md  README.md  WIDGET_LIFECYCLE_TEST.md  remote-widget-quickapp.lua  test-ui-widget-client.js  test-websocket-client.js
docs/examples/custom-icons/: README.md
homemapdata.example/: README.md  asset-manifest.json  config.json
homemapdata.example/icons/: .gitkeep
homemapdata.example/images/: .gitkeep
homemapdata.example/widgets/: binarySwitch.json  doorSensor.json  light.json  lightcolor.json  lightdim.json  motion.json  temperature.json  windowSensor.json
homemapdata.example/widgets/built-in/: binarySwitch.json  curtain.json  doorLock.json  energymeter.json  gauge.json  genericdevice.json  humiditymeter.json  luxmeter.json  motion.json  smokeSensor.json
scripts/: README.md  android-build.sh  android-clear-data.sh  android-create-tablet.sh  android-logs.sh  android-push.sh  android-rebuild.sh  android-run.sh  android-start-emulator.sh  check-android-setup.sh  create-icon.sh  create-package.sh  create-test-package.sh  generate-asset-manifest.sh  init-android.sh  ios-build.sh  ios-clear-data.sh  ios-device.sh  ios-rebuild-simple.sh  ios-rebuild.sh  ios-run.sh  setup-android-env.sh  testflight-build.sh  version.sh
src/: deviceMappings.json  index.html  script-new.js  script.js  styles.css  updater.js
src-tauri/: Cargo.toml  Info-additions.plist  build_embed_assets.rs  tauri.android.conf.json  tauri.conf.json  tauri.ios.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  main.rs  websocket.rs
src/modules/: autoMapManager.js  contextMenuManager.js  deviceHelpers.js  deviceManagementView.js  dialogManager.js  eventManager.js  floorManagementDialog.js  floorManager.js  hc3ApiManager.js  packageManager.js  remoteWidgetManager.js  utils.js  widgetManager.js
