[package]
name = "homemap"
version = "0.1.9"
description = "HC3 Home Automation Map Visualization"
authors = ["Jan Gabrielsson"]
edition = "2021"

[lib]
name = "homemap_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["devtools"] }
tauri-plugin-http = "2"
tauri-plugin-fs = "2"
tauri-plugin-updater = "2"
tauri-plugin-dialog = "2"
tauri-plugin-process = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
dotenvy = "0.15"
dirs = "5"
base64 = "0.22"
rfd = "0.15"
zip = "2.1"

[features]
default = ["custom-protocol"]
custom-protocol = ["tauri/custom-protocol"]
