[package]
name = "homemap"
version = "0.1.43"
description = "HC3 Home Automation Map Visualization"
authors = ["Jan Gabrielsson"]
edition = "2021"

[lib]
name = "homemap_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["protocol-asset"] }
tauri-plugin-http = "2"
tauri-plugin-fs = "2"
tauri-plugin-updater = "2"
tauri-plugin-dialog = "2"
tauri-plugin-process = "2"
tauri-plugin-window-state = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
dotenvy = "0.15"
dirs = "5"
base64 = "0.22"  # Added for decoding asset files
zip = "2.1"
walkdir = "2"
chrono = { version = "0.4", features = ["serde"] }
tokio = { version = "1", features = ["full"] }
tokio-tungstenite = "0.21"
futures-util = "0.3"
urlencoding = "2.1"  # For decoding Android content URIs

[target.'cfg(not(any(target_os = "ios", target_os = "android")))'.dependencies]
rfd = "0.15"
reqwest = { version = "0.12", features = ["json", "blocking"] }

[target.'cfg(any(target_os = "ios", target_os = "android"))'.dependencies]
reqwest = { version = "0.12", features = ["json", "blocking", "rustls-tls"], default-features = false }

[target.'cfg(target_os = "android")'.dependencies]
jni = "0.21"
ndk = "0.9"
ndk-context = "0.1"

[features]
default = ["custom-protocol", "devtools"]
devtools = ["tauri/devtools"]
custom-protocol = ["tauri/custom-protocol"]
